# mr_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: dual_ekf_navsat.yaml  dual_ekf_params.yaml  dual_ekf_params_og.yaml  navsat_transform.yaml  static_image_cmd.txt
launch/: autoware_localization.launch.py  carla_integration.launch.py  carla_localization.launch.py  dual_ekf.launch.py  dual_ekf_localization.launch.py  gps_localization.launch.py  launch.py  lidar_modifier.launch.py  localization.launch.py  static_transforms.launch.py  webcam_mr.launch.py
mr_pkg/: README.md  autoware_localization.py  carla_localization.py  depth_image_logger.py  depth_image_overlay.py  dual_ekf_localization.py  gps_quality_monitor.py  image_overlay.py  kinematic_state_receiver.py  static_image_publisher.py  virtual_perception.py  webcam_publisher.py  world_transformation.py
mr_pkg/modules/: aw_vehicle_telemetry.py  logger.py  mr_telemetry.py  multi_agent_template.py  telemetry.py
src/: virtual_perception.py  world_transformation.py
